<resources>
    <string name="app_name">Android Academy TLV</string>

    <string name="facebook_app_id">1690466181233207</string>

    <!-- Labels -->
    <string name="login">Login</string>

    <!-- Login Screen -->
    <string name="login_with_google">Sign In with Google+</string>
    <string name="login_with_facebook">Sign In with Facebook</string>
    <string name="skip">Skip</string>

    <!-- Setup Screen -->
    <string name="email_hint">Enter valid email</string>
    <string name="name_hint">Enter your nick name</string>
    <string name="title_are_you">Hi %s\nAre you developer or designer?</string>

    <!-- Welcome Screen -->
    <string name="welcome_title_developer">Hello there Androider</string>
    <string name="welcome_title_designer">Hello there Designer</string>
    <string name="welcome_text">Yo yo yo, welcome Yo yo yo, welcome Yo yo yo, welcome Yo yo yo, welcome Yo yo yo, welcome Yo yo yo, welcome Yo yo yo, welcome Yo yo yo, welcome Yo yo yo, welcome Yo yo yo, welcome Yo yo yo, welcome Yo yo yo, welcome </string>
    <string name="start">Let\'s Start</string>

    <!-- Main Screen -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Tabs names -->
    <string name="tab_classes">classes</string>
    <string name="tab_favorites">favorites</string>
    <string name="tab_pickups">pickups</string>
    <string name="tab_rsvp">rsvp</string>

    <!-- Transactions names -->
    <string name="trn_developer">transaction_setup_developer</string>
    <string name="trn_designer">transaction_setup_designer</string>

    <!--RSVP Screen-->
    <string name="rsvp_title">RSVP</string>
    <string name="attendants">Attendants</string>
    <string name="plan_to_show_question">Do you plan to show?</string>
    <string name="title_activity_rsvp">RsvpActivity</string>
    <string name="add_to_my_calendar">Add to my Calendar</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="remind_me_in">Remind me in:</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="lesson_number_format">Lesson #</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="attendants_txt">" Students have already signed up!"</string>

    <!--Error Handling-->
    <string name="no_internet">No Internet Connection</string>
    <string name="facebook_login_cancelled">Facebook Login Cancelled</string>
    <string name="facebook_login_failed">Facebook Login Failed</string>
    <string name="title_activity_about_us">AboutUsActivity</string>

    <string name="hello_world">Hello world!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
