<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@android:color/white"
    tools:openDrawer="start">

    <!-- Title Background -->
    <View
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@android:color/holo_blue_bright"/>

    <Space
        android:id="@+id/spacer_top"
        android:layout_below="@id/titleView"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/spacer_top"
        android:layout_margin="15dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textStyle="bold"
                android:hint="@string/name_hint"
                />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textStyle="bold"
                android:hint="@string/email_hint"
                />

            <Space
                android:id="@+id/spcCenter"
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:id="@+id/cardView"
                card_view:cardCornerRadius="15dp"
                card_view:cardBackgroundColor="#0ddddddd">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvSelectionTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:textAlignment="center"
                        android:text="@string/title_are_you"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <ImageButton
                            android:id="@+id/btnDeveloper"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:src="@drawable/btn_androidersetup"
                            android:background="@android:color/transparent"
                            android:transitionName="@string/trn_developer"
                            />

                        <ImageButton
                            android:id="@+id/btnDesigner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:src="@drawable/btn_designersetup"
                            android:background="@android:color/transparent"
                            android:transitionName="@string/trn_designer"
                            />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>

    <!--<android.support.v7.widget.CardView-->
        <!--android:id="@+id/img_wraper"-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_height="100dp"-->
        <!--card_view:cardCornerRadius="10dp"-->
        <!--card_view:cardBackgroundColor="#00ffffff"-->
        <!--card_view:layout_anchor="@id/titleView"-->
        <!--card_view:layout_anchorGravity="bottom|center"-->
        <!-->-->

        <ImageButton
            android:id="@+id/btnAvatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/ic_avatar_man"
            card_view:layout_anchor="@id/titleView"
            card_view:layout_anchorGravity="bottom|center"/>
    <!--</android.support.v7.widget.CardView>-->

</android.support.design.widget.CoordinatorLayout>